# Gagarin-Science-Conference-2023

./: README.md
src/: Dockerfile  Gaga_opencv.cpp  README.md
src/opencv_video/: CMakeLists.txt  README.md  SETUP.md
src/opencv_video/einit/: CMakeLists.txt
src/opencv_video/einit/src/: init.yaml.in  security.psl
src/opencv_video/publisher/: CMakeLists.txt
src/opencv_video/publisher/src/: general.h  main.cpp  publisher.cpp  publisher.h
src/opencv_video/resources/edl/: Publisher.edl
src/read_file_from_rom/einit/: CMakeLists.txt
src/read_file_from_rom/hello/src/: hello.c
src/read_file_from_rom/resources/romfs/: foo.cfg
src/tcpserver/linux_client/: CMakeLists.txt  client.cpp
src/tcpserver/net_server/: CMakeLists.txt  README.md  cross-build.sh  expected_output
src/tcpserver/net_server/einit/: CMakeLists.txt
src/tcpserver/net_server/einit/src/: init.yaml.in  security.psl  security_arm.psl  security_x86.psl  trusted.psl
src/tcpserver/net_server/env/: CMakeLists.txt
src/tcpserver/net_server/env/src/: env.c
src/tcpserver/net_server/server/: CMakeLists.txt
src/tcpserver/net_server/server/src/: server.cpp
src/tcpserver/net_server/vfs/: CMakeLists.txt
src/tcpserver/net_server/vfs/src/: net_vfs.c
